Fix formatting of chapter 4b. Tables aligned to the left, fixed lists in tables

--- a/website/style.css
+++ b/website/style.css
@@ -11,9 +11,19 @@ body, html {
 table.center {
     margin-left:auto; 
     margin-right:auto;
-	text-align: center;
+	text-align: left;
   }
 
+td
+{
+	  padding-left: 5px;
+	  padding-right: 5px;
+}
+
+td > ul
+{
+	padding-left: 20px;
+}
 
 a 
 {
@@ -377,10 +387,10 @@ line-height: 150%;
 {
 	font-family: Raleway;
 	font-size: 1.4em;
-	margin-top: 30px;
+	margin-top: 10px;
 	padding-left: 10%;
 	text-align: left;
-	margin-bottom: 10px;
+	margin-bottom: 5px;
 	color: #000;
 }
 
